# MLIR-Pass-Tour

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/simplepass/Passes/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/simplepass/: CMakeLists.txt
lib/simplepass/Passes/: CMakeLists.txt  CustomAttrToSCF.cpp  PassDetails.h
simplepass-opt/: CMakeLists.txt  simplepass-opt.cpp
